--- a/src/command-quasar-frontend/src/css/quasar.variables.scss
+++ b/src/command-quasar-frontend/src/css/quasar.variables.scss
@@ -12,13 +12,14 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
+
+$primary   : #486678;
+$secondary : #3726a6;
 $accent    : #9C27B0;
 
-$dark      : #1D1D1D;
+$dark      : #1d1d1d;
 
-$positive  : #21BA45;
-$negative  : #C10015;
-$info      : #31CCEC;
+$positive  : #754906;
+$negative  : #5c0707;
+$info      : #5f919c;
 $warning   : #F2C037;
