--- a/src/command-quasar-frontend/src/css/app.scss
+++ b/src/command-quasar-frontend/src/css/app.scss
@@ -1,1 +1,7 @@
-// app global css in SCSS form
+.q-field__native, .q-field__input {
+  color: lightgray;
+}
+
+.q-field__messages {
+  color: $primary;
+}
