--- a/src/command-quasar-frontend/src/css/quasar.variables.scss
+++ b/src/command-quasar-frontend/src/css/quasar.variables.scss
@@ -19,7 +19,7 @@ $accent    : #9C27B0;
 
 $dark      : #1d1d1d;
 
-$positive  : #754906;
+$positive  : #d49638;
 $negative  : #5c0707;
 $info      : #5f919c;
 $warning   : #F2C037;
