Showing platforms in root page (cli/programming language)

--- a/src/command-quasar-frontend/src/css/quasar.variables.scss
+++ b/src/command-quasar-frontend/src/css/quasar.variables.scss
@@ -14,12 +14,12 @@
 
 
 $primary   : #486678;
-$secondary : #3726a6;
+$secondary : #bad2df;
 $accent    : #9C27B0;
 
 $dark      : #1d1d1d;
 
 $positive  : #d49638;
 $negative  : #5c0707;
-$info      : #5f919c;
+$info      : #5f919c; 
 $warning   : #F2C037;
