Notify when cmd/snippet updates and handling error

--- a/src/command-quasar-frontend/src/css/quasar.variables.scss
+++ b/src/command-quasar-frontend/src/css/quasar.variables.scss
@@ -13,9 +13,9 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 
-$primary   : #486678;
+$primary   : #578fb1;
 $secondary : #bad2df;
-$accent    : #9C27B0;
+$accent    : #27b09e;
 
 $dark      : #1d1d1d;
 
